--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,12 +7,8 @@
         "id": "d21bb30d61ec810c",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "ToDo.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -69,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "ToDo.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
